--- a/index.css
+++ b/index.css
@@ -377,6 +377,7 @@ nav>h1{
 }
 .movie>div>img{
     width: 100%;
+    height: 80%;
 }
 .movie>div{
     margin:0rem 0.4rem 2rem 0rem;
@@ -857,6 +858,8 @@ nav>h1{
     padding: 0.5rem;
     width: 20%;
     border-radius: 1rem;
+    max-width: 100%;
+    height: auto;
 }
 .uudaisukien{
     margin-top: 8rem;
@@ -864,6 +867,7 @@ nav>h1{
     background-color: white;
 }
 .uudai>div>p{
+    max-width: 45rem;
     margin: 0.5rem;
     color: black;
 }
@@ -964,4 +968,63 @@ nav>h1{
     border-radius: 0.2rem;
     border-left: 1px solid #F29438;
     border-bottom: 1px solid #F29438;
+}
+/* ----------------------------------------food && drink------------------------------------- */
+.food-drink{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    top: 0%;
+    left: 0%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 999;
+    color: black;
+    display: none;
+}
+.food-drink-form{
+    position: relative;
+    width: 20rem;
+    height: 25rem;
+    background-color: aliceblue;
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 0.3rem;
+}
+.food-drink-form>div>span{
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.2rem;
+    border-radius: 0.2rem;
+    border-left: 1px solid #F29438;
+    border-bottom: 1px solid #F29438;
+}
+.food-drink-form>div>img{
+    margin-right: 0.5rem;
+}
+.food-drink-form>div>select{
+    color: black;
+    border: 1px solid #F29438;
+    outline: none;
+    border-radius: 0.2rem;
+}
+.food-drink-form>div>select>option{
+    color: black;
+}
+.food-drink-form>button{
+    background-color: #F29438;
+    border: none;
+    outline: none;
+    padding: 0.5rem 2rem;
+    border-radius: 0.3rem;
+    color: black;
+}
+.food-drink-form>div>h2,.food-drink-form>p{
+    color: black;
 }
